--- a/FrontEnd/src/app/routes/home/home/home.component.html
+++ b/FrontEnd/src/app/routes/home/home/home.component.html
@@ -2,7 +2,7 @@
     <div class="jumbotron">
         <div class="row">
             <div class="col-xl-3 col-lg-4">
-                <div class="text-center">
+                <div class="text-center" *ngIf="ndermarrje">
                     <img alt="Ndermarrje Logo" class="img-fluid home-logo" [src]="ndermarrje?.logo" (error)="img.src=settings.getAppSetting('logo')" #img/>
                 </div>
             </div>
