FrontEnd notifications Service. FileServer userId -> perdoruesId

--- a/FrontEnd/src/app/layout/sidebar/sidebar.component.html
+++ b/FrontEnd/src/app/layout/sidebar/sidebar.component.html
@@ -7,7 +7,7 @@
 
             <!-- START user info-->
             <li class="has-user-block">
-                <app-userblock></app-userblock>
+                <app-userblock [perdorues]="perdorues"></app-userblock>
             </li>
             <!-- END user info-->
 
