--- a/FrontEnd/src/app/routes/pages/login/login.component.html
+++ b/FrontEnd/src/app/routes/pages/login/login.component.html
@@ -16,7 +16,7 @@
                     <div class="form-group">
                         <div class="input-group with-focus">
                             <input class="form-control border-right-0" id="username" type="username" name="username"
-                                placeholder="Përdoruesi" autocomplete="off" formControlName="username" required="" />
+                                placeholder="Përdoruesi" autocomplete="off" formControlName="username" required="" #usernameRef/>
                             <div class="input-group-append">
                                 <span class="input-group-text text-muted bg-transparent border-left-0">
                                     <em class="fa fa-envelope"></em>
