--- a/FrontEnd/src/app/layout/layout.component.html
+++ b/FrontEnd/src/app/layout/layout.component.html
@@ -1,6 +1,6 @@
 <div class="wrapper">
     <!-- top navbar-->
-    <app-header class="topnavbar-wrapper"></app-header>
+    <app-header class="topnavbar-wrapper" [ndermarrje]="ndermarrje"></app-header>
     <!-- sidebar-->
     <app-sidebar class="aside-container"></app-sidebar>
     <!-- offsidebar-->
@@ -13,5 +13,5 @@
         </div>
     </section>
     <!-- Page footer-->
-    <footer class="footer-container" app-footer></footer>
+    <footer class="footer-container" app-footer [ndermarrje]="ndermarrje"></footer>
 </div>
